# apg-posting-desk

./: .env.example  .firebaserc  .gitignore  .vercelignore  AGENTS.md  CODEX_DEVELOPMENT_PROMPT.md  DESIGN.md  HANDOFF.md  MANUAL_TESTING.md  README.md  SYSTEM_FLOW_DIAGRAM.md  config.yaml  firebase.json  firestore.rules  index.html  package-lock.json  package.json  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  system_diagram.html  vercel.json  vite.config.js
.omo/: boulder.json
Novaliches, 440 Bagbag/: Untitled document.docx
apg_automation/: AGENTS.md  __init__.py  ai_clients.py  asset_service.py  auth_deps.py  caption_generator.py  config.py  content_extractor.py  firebase_auth.py  firebase_queue.py  folder_parser.py  fraction_handler.py  google_auth.py  google_drive.py  google_tracking.py  google_workspace_mcp.py  ingest.py  job_store.py  local_folder.py  logging_config.py  main.py  models.py  queue_manager.py  retry.py  review_pipeline.py  serverless.py  supabase_assets.py  supabase_auth.py  supabase_client.py  supabase_job_store.py  supabase_queue.py  supabase_tracking.py  tracker_updater.py  web_app.py
api/: index.py  requirements.txt
docs/: FIREBASE_MCP_SETUP.md
e2e/: playwright.config.ts  smoke.mjs
public/: manifest.webmanifest  service-worker.js
src/: AGENTS.md  main.js  styles.css
tests/: AGENTS.md  test_ai_clients.py  test_caption_generator.py  test_config.py  test_content_extractor.py  test_firebase_auth.py  test_firestore_queue.py  test_fraction_handler.py  test_google_auth.py  test_google_workspace_mcp.py  test_ingest.py  (+10 more)
(+19 files in other folders)
